src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Reporting_From_Date__c</fullName>
        <inlineHelpText>The minimum Reporting From Date on all of the Drawdowns which are eligible for inclusion in the Portfolio reports.</inlineHelpText>
        <label>Reporting From Date</label>
        <summarizedField>Drawdown__c.Reporting_From_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Drawdown__c.Payment_Method__c</field>
            <operation>notEqual</operation>
            <value>Payment</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Drawdown__c.Include_in_Portfolio_Reports__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reporting_To_Date__c</fullName>
        <inlineHelpText>The maximum Reporting TO Date on all of the Drawdowns which are eligible for inclusion in the Portfolio reports.</inlineHelpText>
        <label>Reporting To Date</label>
        <summarizedField>Drawdown__c.Reporting_To_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Drawdown__c.Payment_Method__c</field>
            <operation>notEqual</operation>
            <value>Payment</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Drawdown__c.Include_in_Portfolio_Reports__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Scenario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indicates which type of loan document template should be generated for this Opportunity</inlineHelpText>
        <label>Document Scenario</label>
        <referenceTo>Scenario__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Loan_Doc_Check__c</fullName>
        <description>This field controls if all the necessary fields to fill out a LumpSum or a Facility Loan are filled out.</description>
        <formula>Generate_Loan_Doc_Check__c
&amp;&amp; !ISBLANK(Primary_Contact_Email__c)</formula>
        <label>Send Loan Doc Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_Fall__c</fullName>
        <label>Short Fall</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shortfall_Surplus__c</fullName>
        <formula>Payment_Roll_up__c - Total_Payout__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shortfall/Surplus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stage_Status_Notes_Other__c</fullName>
        <label>Stage Status Notes - &quot;Other&quot;</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Status__c</fullName>
        <label>Stage Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1st Week</fullName>
                </value>
                <value>
                    <fullName>2nd Week</fullName>
                </value>
                <value>
                    <fullName>File for Review</fullName>
                </value>
                <value>
                    <fullName>Add&apos;l Docs Required</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>F/U with PC/Facility</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Assessor Declined</fullName>
                </value>
                <value>
                    <fullName>Legal Representative Declined</fullName>
                </value>
                <value>
                    <fullName>Non-Responsive (Legal Representative/Plaintiff)</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Contact Sheet Completed; Part I of App Sent to Lead for Signature</fullName>
                </value>
                <value>
                    <fullName>Part II of App Sent to Firm w/ Request for Supporting Docs</fullName>
                </value>
                <value>
                    <fullName>Waiting for Additional Supporting Documents</fullName>
                </value>
                <value>
                    <fullName>Waiting for Payout From Other Lender</fullName>
                </value>
                <value>
                    <fullName>File Sent to Assessors Review</fullName>
                </value>
                <value>
                    <fullName>Awaiting Final Client Signature</fullName>
                </value>
                <value>
                    <fullName>Funds Advanced/Awaiting Signed Loan Documents</fullName>
                </value>
                <value>
                    <fullName>Awaiting Final Lawyer Signature</fullName>
                </value>
                <value>
                    <fullName>File Sent for EFT</fullName>
                </value>
                <value>
                    <fullName>See Notes</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Bad Debt</fullName>
                </value>
                <value>
                    <fullName>Paid Off</fullName>
                </value>
                <value>
                    <fullName>Payments Halted</fullName>
                </value>
                <value>
                    <fullName>Partial Payment</fullName>
                </value>
                <value>
                    <fullName>Shortfall</fullName>
                </value>
                <value>
                    <fullName>Surplus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Style_of_Cause_Description__c</fullName>
        <label>Style of Cause/Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_from_W2L__c</fullName>
        <description>This is the Subject that was entered on the Web To Lead form.</description>
        <label>Subject from W2L</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsequent_Drawdowns__c</fullName>
        <label>Subsequent Drawdowns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temp_Payment_Received__c</fullName>
        <label>Temp Payment Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Allowance_Available__c</fullName>
        <formula>Amount - Total_Service_Providers_Allowance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Allowance Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Paid_Service_Provider__c</fullName>
        <description>Field populated by a rollup.</description>
        <label>Total Paid Service Provider</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payout_Received__c</fullName>
        <formula>Principal_Received__c +  Interest_Received__c +  Administration_Fee_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Payout Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payout__c</fullName>
        <formula>(Drawdown_Total_wo_Payment__c + Payout_Interest__c) - Payment_Roll_up__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Payout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Service_Providers_Allowance__c</fullName>
        <description>Field populated via rollup</description>
        <label>Total Service Providers Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TreatmentLoanAggregate__c</fullName>
        <description>This field is used in the amount displayed in page 11 of the Treatment loan note.</description>
        <formula>Amount - First_Drawdown_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Treatment Loan Aggregate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Loan__c</fullName>
        <label>Type of Loan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Facility Loan</fullName>
                </value>
                <value>
                    <fullName>Lump-Sum</fullName>
                    <default>true</default>
                    <label>Lump-Sum</label>
                </value>
                <value>
                    <fullName>Treatment Loan</fullName>
                </value>
                <value>
                    <fullName>Treatment Loan 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WIP__c</fullName>
        <label>WIP #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_Happened_from_W2L__c</fullName>
        <label>What Happened from W2L</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpportunitiesOPEN</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>What_Happened_from_W2L__c</columns>
        <columns>Funding_Requested__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed With Loan,Closed No Loan</value>
        </filters>
        <label>All Opportunities - OPEN</label>
    </listViews>
    <listViews>
        <fullName>AllOpportunitiestoday</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>What_Happened_from_W2L__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Opportunities - Today</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Opportunities_Missing_Finance_Statement</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Date_Financing_Statement_Done__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed With Loan</value>
        </filters>
        <filters>
            <field>Date_Financing_Statement_Done__c</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunities - Missin Finance Statement</label>
    </listViews>
    <listViews>
        <fullName>Opportunities_WIP_ALL</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Type_of_Loan__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Funding_Requested__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Stage_Status__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>WIP__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Client_Opportuniy_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>Opportunities - WIP - ALL</label>
    </listViews>
    <listViews>
        <fullName>Opportunities_WIP_Antonella</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Funding_Requested__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>WIP__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Client_Opportuniy_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>contains</operation>
            <value>Antonella</value>
        </filters>
        <label>Opportunities - WIP - Antonella</label>
    </listViews>
    <listViews>
        <fullName>Opportunities_WIP_Dominik</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Funding_Requested__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>WIP__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Client_Opportuniy_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>contains</operation>
            <value>Dominik</value>
        </filters>
        <label>Opportunities - WIP - Dominik</label>
    </listViews>
    <listViews>
        <fullName>Opportunities_WIP_Wendy</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Funding_Requested__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>WIP__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Client_Opportuniy_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>contains</operation>
            <value>Wendy</value>
        </filters>
        <label>Opportunities - WIP - Wendy</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <listViews>
        <fullName>X01_All_Open_Opportinities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>What_Happened_from_W2L__c</columns>
        <columns>Funding_Requested__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Type_of_Loan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>01 - All Open Opportinities</label>
    </listViews>
    <listViews>
        <fullName>X11_My_Opportunities_Closing_This_Month</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>11 - My Opportunities Closing This Month</label>
    </listViews>
    <recordTypes>
        <fullName>Client_Opportunity_Record_Type</fullName>
        <active>true</active>
        <businessProcess>Client Sales Process</businessProcess>
        <description>Use this record type to track the client loan process</description>
        <label>Client Opportunity Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Law_Firm_Engagement_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Law Firm Engagement</businessProcess>
        <description>Use this record type to track the law firm engagement process</description>
        <label>Law Firm Engagement Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loan_Re_Assessment_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Client Sales Fast-Track Process</businessProcess>
        <description>Use this record type to track the loan re-assessment process</description>
        <label>Loan Re-Assessment Opportunity</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_Key_Fields_after_Paid_Out</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Count_of_Payments__c&gt;0,
     OR(
        IsChanged(Interest_Rate__c),
        IsChanged( Compounding_Interest__c ),
        IsChanged(  Interest_Compounding_Period__c  ),
        IsChanged( Interest_Deferral_Period__c ),
        IsChanged( Minimum_Interest_Period__c )
     )
 )</errorConditionFormula>
        <errorMessage>Cannot change loan setup information after Payments created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Have_Min_interest_and_Defferred</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(IsPickVal(Minimum_Interest_Period__c,&quot;&quot;)),
    NOT(OR(IsPickVal(Interest_Deferral_Period__c,&quot;0&quot;),
           IsPickVal(Interest_Deferral_Period__c,&quot;&quot;))))</errorConditionFormula>
        <errorMessage>Cannot have both minimum interest and deferred interest.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Compounding_Interest_Requires_Frequency</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ispickval(Interest_Compounding_Period__c,&apos;Compounding Interest&apos;), ispickval(Compounding_Interest__c,&quot;&quot;))</errorConditionFormula>
        <errorMessage>As Compounding Interest is selected please provide a value for Compounding Frequency.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OPP_VR_01_Assessment</fullName>
        <active>true</active>
        <description>Facility Loans are the only opportunities that can be re-assessed</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL(Type_of_Loan__c, &quot;Facility Loan&quot;)),
ISPICKVAL(StageName, &quot;Re-Assessment&quot;)
)</errorConditionFormula>
        <errorMessage>The Re-Assessment Stage is not available for Opportunities that are not Facility Loans</errorMessage>
    </validationRules>
</CustomObject>